--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/layout.css">
@@ -9,16 +10,20 @@
     <body>
       <div class="a"></div>
       <div class="b"></div>
-      <div class="c"></div>
-      <div class="d"></div>
+      <div class="cd-container">
+        <div class="c"></div>
+        <div class="d"></div>
+      </div>
+      <div class="efgh-container">
       <div class="ef-container">
-        <div class="e clearfix"></div>
-        <div class="f clearfix"></div>
+        <div class="e"></div>
+        <div class="f"></div>
       </div>
       <div class="gh-container">
-        <div class="g clearfix"></div>
-        <div class="h clearfix"></div>
+        <div class="g"></div>
+        <div class="h"></div>
       </div>
+    </div>
       <div class="i"></div>
     </body>
 </html>
