--- a/index.html
+++ b/index.html
@@ -8,22 +8,40 @@
     <link rel="stylesheet" href="styles/modules.css">
   </head>
     <body>
-      <div class="a"></div>
-      <div class="b"></div>
+      <div class="a">
+        <p>a</p>
+      </div>
+      <div class="b">
+        <p>b</p>
+      </div>
       <div class="cd-container">
-        <div class="c"></div>
-        <div class="d"></div>
+        <div class="c">
+          <p>c</p>
+        </div>
+        <div class="d">
+          <p>d</p>
+        </div>
       </div>
       <div class="efgh-container">
-      <div class="ef-container">
-        <div class="e"></div>
-        <div class="f"></div>
+        <!-- <div class="ef-container"> -->
+          <div class="e">
+            <p>e</p>
+          </div>
+          <div class="f">
+            <p>f</p>
+          </div>
+        <!-- </div> -->
+        <!-- <div class="gh-container"> -->
+          <div class="g">
+            <p>g</p>
+          </div>
+          <div class="h">
+            <p>h</p>
+          </div>
+        <!-- </div> -->
       </div>
-      <div class="gh-container">
-        <div class="g"></div>
-        <div class="h"></div>
+      <div class="i">
+        <p>i</p>
       </div>
-    </div>
-      <div class="i"></div>
     </body>
 </html>
